--- a/packages/apps/admin/src/container/AppointmentLog/appointment-log.scss
+++ b/packages/apps/admin/src/container/AppointmentLog/appointment-log.scss
@@ -155,6 +155,9 @@
 
             &.total{
                 margin-right:0;
+                box-shadow: -6px -6px 9px 0px rgba(0, 0, 0, 0.2), 
+                6px 6px 9px rgba(0, 0, 0, 0.4);
+  
                 .icon{
                     background-color:darken(#008080,10%);
                     color:white;
