--- a/packages/apps/admin/src/container/AdminActivitiesLog/activity-log.scss
+++ b/packages/apps/admin/src/container/AdminActivitiesLog/activity-log.scss
@@ -33,6 +33,10 @@
     }
 
     .badge {
+        display: inline-block;
+        padding: 0.55em 0.75em;
+        font-size: 75%;
+        font-weight: 500;
         width         : auto;
         height        : auto;
         // top        :50%;
@@ -40,11 +44,10 @@
         // transform  :translate(-50%,-50%);
         text-align    : center;
         vertical-align: middle;
-        font-size     : 0.65rem;
-        line-height   : 0.8rem;
-        padding       : 6px 8px;
-        
-        text-transform: uppercase;
+        // font-size     : 0.65rem;
+        // line-height   : 0.8rem;
+       
+        line-height: 1;
         @include border-radius(4px);
     }
 
@@ -92,6 +95,48 @@
             margin-left:20px;
         }
     
+    }
+
+    .legend-box{
+        display: block;
+       
+        width:280px;
+        height: auto;
+        border:1px solid #ccc;
+        margin:20px auto;
+        padding:8px;
+       
+        
+        @include border-radius(0.5rem);
+
+        ul li{
+            width:50%;
+            float:left;
+            height: 30px;
+
+            span{
+                border:1px solid #ccc;
+                width:8px;
+                height: 6px;
+            }
+
+            &:nth-child(1){
+                .fa{
+                    color:$primary;
+                }
+            }
+
+            &:nth-child(2){
+                .fa{
+                    color:green;
+                }
+            }
+        }
+
+        p{
+            text-align: center;
+            font-weight:500;
+        }
     }
 
     
