--- a/packages/apps/admin/src/container/AdminActivitiesLog/activity-log.scss
+++ b/packages/apps/admin/src/container/AdminActivitiesLog/activity-log.scss
@@ -102,7 +102,7 @@
        
         width:280px;
         height: auto;
-        border:1px solid #ccc;
+        // border:1px solid #ccc;
         margin:20px auto;
         padding:8px;
        
@@ -113,22 +113,92 @@
             width:50%;
             float:left;
             height: 30px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
 
-            span{
-                border:1px solid #ccc;
-                width:8px;
-                height: 6px;
+            // span{
+            //     // border:1px solid #ccc;
+            //     width:8px;
+            //     height: 6px;
+            // }
+
+            .legend{
+                width:15px;
+                height:15px;
+                display: inline-block;
+                padding: 0.55em 0.55em;
+                margin-right:6px;
+                background-color:$primary;
+                line-height: 1;
+                text-align: center;
+                border-radius: 0.25rem;
+            
             }
 
+            
+
             &:nth-child(1){
-                .fa{
-                    color:$primary;
+               .legend{
+                    background-color:lighten($primary,0);
                 }
             }
 
             &:nth-child(2){
-                .fa{
-                    color:green;
+                .legend{
+                    background-color:#CCCCB3;
+                }
+            }
+
+            
+            &:nth-child(3){
+                .legend{
+                    background-color:#003B46;
+                }
+            }
+
+            
+            &:nth-child(4){
+                .legend{
+                    background-color:#FFCAFF;
+                }
+            }
+
+            
+            &:nth-child(5){
+                .legend{
+                    background-color:#A2C523;
+                }
+            }
+
+            &:nth-child(6){
+                .legend{
+                    background-color:#FFBB00;
+                }
+            }
+
+            &:nth-child(7){
+                .legend{
+                    background-color:#EAEC93;
+                }
+            }
+
+            &:nth-child(8){
+                .legend{
+                    background-color:#D7FBE6;
+                }
+            }
+
+            &:nth-child(9){
+                .legend{
+                    background-color:#34675C;
+                }
+            }
+
+            &:nth-child(10){
+                .legend{
+                    background-color:#00FF00;
                 }
             }
         }
