--- a/packages/apps/admin/src/container/ClientActivitiesLog/activity-log.scss
+++ b/packages/apps/admin/src/container/ClientActivitiesLog/activity-log.scss
@@ -7,8 +7,8 @@
 @import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
 @import '~bootstrap/scss/mixins';
 
-#appointment-log {
-
+#admin-acitivity-log {
+   
 
     .appointment-badge {
         float : right;
@@ -33,18 +33,21 @@
     }
 
     .badge {
-        width         : 30px;
+        display: inline-block;
+        padding: 0.55em 0.75em;
+        font-size: 75%;
+        font-weight: 500;
+        width         : auto;
         height        : auto;
         // top        :50%;
         // left       :50%;
         // transform  :translate(-50%,-50%);
         text-align    : center;
         vertical-align: middle;
-        font-size     : 0.65rem;
-        line-height   : 0.8rem;
-        padding       : 6px 8px;
-        
-        text-transform: uppercase;
+        // font-size     : 0.65rem;
+        // line-height   : 0.8rem;
+       
+        line-height: 1;
         @include border-radius(4px);
     }
 
@@ -60,6 +63,153 @@
         width          : 50%;
         // padding-left: 4px;
     }
+
+    .activity-container{
+        // padding: 15px;
+        //  margin: 1rem 15px;
+        border-radius: 0.5rem;
+        margin-bottom:15px;
+      
+    }
+
+    .activity-count{
+        padding: 10px;
+        background-color:$white;
+        height: 100%;
+        @include border-radius(0.5rem);
+        
+        .title{
+            margin-top:20px;
+            margin-left:20px
+        }
+    }
+
+    .activity-log{
+        padding: 10px;
+        background-color:$white;
+        height: 100%;
+        @include border-radius(0.5rem);
+
+        .title{
+            margin-top:20px;
+            margin-left:20px;
+        }
+    
+    }
+
+    .legend-box{
+        display: block;
+       
+        width:280px;
+        height: auto;
+        // border:1px solid #ccc;
+        margin:20px auto;
+        padding:8px;
+       
+        
+        @include border-radius(0.5rem);
+
+        ul li{
+            width:50%;
+            float:left;
+            height: 30px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            // span{
+            //     // border:1px solid #ccc;
+            //     width:8px;
+            //     height: 6px;
+            // }
+
+            .legend{
+                width:15px;
+                height:15px;
+                display: inline-block;
+                padding: 0.55em 0.55em;
+                margin-right:6px;
+                background-color:$primary;
+                line-height: 1;
+                text-align: center;
+                border-radius: 0.25rem;
+            
+            }
+
+            
+
+            &:nth-child(1){
+               .legend{
+                    background-color:lighten($primary,0);
+                }
+            }
+
+            &:nth-child(2){
+                .legend{
+                    background-color:#CCCCB3;
+                }
+            }
+
+            
+            &:nth-child(3){
+                .legend{
+                    background-color:#003B46;
+                }
+            }
+
+            
+            &:nth-child(4){
+                .legend{
+                    background-color:#FFCAFF;
+                }
+            }
+
+            
+            &:nth-child(5){
+                .legend{
+                    background-color:#A2C523;
+                }
+            }
+
+            &:nth-child(6){
+                .legend{
+                    background-color:#FFBB00;
+                }
+            }
+
+            &:nth-child(7){
+                .legend{
+                    background-color:#EAEC93;
+                }
+            }
+
+            &:nth-child(8){
+                .legend{
+                    background-color:#D7FBE6;
+                }
+            }
+
+            &:nth-child(9){
+                .legend{
+                    background-color:#34675C;
+                }
+            }
+
+            &:nth-child(10){
+                .legend{
+                    background-color:#00FF00;
+                }
+            }
+        }
+
+        p{
+            text-align: center;
+            font-weight:500;
+        }
+    }
+
+    
 
     @media (max-width: 1199px) {
         .hide-on-md {
