--- a/packages/common-sass-client/src/scss/pages/_login.scss
+++ b/packages/common-sass-client/src/scss/pages/_login.scss
@@ -161,6 +161,27 @@ flex-direction:column;
     font-size:19px;
     margin:4px 0 24px;
    }
+
+   .verify-wrapper{
+    padding:90px 10px;
+  }
+
+  .forgot-password-content{
+    font-size:1rem;
+    letter-spacing:0;
+    margin-bottom:20px;
+  }
+
+  #login-page-redirect{
+    line-height: 1.5;
+  }
+
+  .change-email-verify{
+   font-size: 1rem;
+   letter-spacing:0;
+   margin-bottom:20px;
+  }
+
    
    .password-requirement{
      // display:none;
