--- a/packages/common-sass-client/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass-client/src/scss/pages/_profile-setup.scss
@@ -62,6 +62,9 @@
             right   : 0;
             width   : 40px;
             margin-top:0;
+            margin-right:0;
+
+
 
             &.form-check .form-check-label:before {
                 margin-left: -4px;
@@ -251,6 +254,7 @@
             position: absolute;
             right   : 0;
             width   : 40px;
+            margin-right:0;
 
             &.form-check .form-check-label:before {
                 margin-left: -4px;
