--- a/packages/common-sass-client/src/scss/variables/_custom-variables.scss
+++ b/packages/common-sass-client/src/scss/variables/_custom-variables.scss
@@ -1,7 +1,7 @@
 // Brand Colors
 $cogent-accent :   #4bd6f2 !default;
-$cogent:         darken(#1073af,6%) !default;
-//$cogent:      #0d5dae !default;
+// $cogent:         darken(#1073af,6%) !default;
+$cogent:      #0063ff !default;
 $facebook:       #3b5998 !default;
 $twitter:        #00aced !default;
 $linkedin:       #4875b4 !default;
