--- a/packages/common-sass/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass/src/scss/pages/_profile-setup.scss
@@ -62,6 +62,26 @@
             right   : 0;
             width   : 40px;
             margin-top:0;
+            margin-right:0;
+            ::-webkit-input-placeholder {
+        /* WebKit browsers */
+         color: transparent;
+    }
+     :-moz-placeholder {
+        /* Mozilla Firefox 4 to 18 */
+         color: transparent;
+    }
+     ::-moz-placeholder {
+        /* Mozilla Firefox 19+ */
+         color: transparent;
+    }
+     :-ms-input-placeholder {
+        /* Internet Explorer 10+ */
+         color: transparent;
+    }
+     input::placeholder {
+         color: transparent;
+    }
 
             &.form-check .form-check-label:before {
                 margin-left: -4px;
@@ -243,6 +263,10 @@
 
             #expandible-search input[type=search] {
                 border: none;
+                
+              
+                
+                
             }
 
         }
@@ -251,6 +275,7 @@
             position: absolute;
             right   : 0;
             width   : 40px;
+            margin-right:0;
 
             &.form-check .form-check-label:before {
                 margin-left: -4px;
