--- a/packages/apps/admin/src/container/CompanySetup/companyHoc.scss
+++ b/packages/apps/admin/src/container/CompanySetup/companyHoc.scss
@@ -30,11 +30,11 @@ h5.title{
        border:none;
     }
 
-    &:first-child{
-        .remove-contact{
-            display:none;
-        }
-    }
+    // &:first-child{
+    //     .remove-contact{
+    //         display:none;
+    //     }
+    // }
 }
 
 .upload-button{
