--- a/packages/common-sass/src/scss/custom-components/_editatable-datatable.scss
+++ b/packages/common-sass/src/scss/custom-components/_editatable-datatable.scss
@@ -69,7 +69,8 @@
                         font-size: 12px;
                         padding:4px;
                         font-weight: 300;
-                        transition:1.5s ease-in;
+                        transition:1s ease-in;
+                        display:none;
 
                       }
 
