--- a/packages/common-sass-client/src/scss/_breadcrumb.scss
+++ b/packages/common-sass-client/src/scss/_breadcrumb.scss
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     padding:0;
     //padding:0.5rem;
+    height:36px;
   
     margin-bottom: 1px;
     list-style: none;
@@ -44,6 +45,9 @@
     }
 
 
+    a,span{
+      line-height:2rem;
+    }
 
 
   }
