--- a/packages/common-sass-client/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass-client/src/scss/pages/_profile-setup.scss
@@ -368,6 +368,7 @@
             background-position: center;
             position           : relative;
             padding       : 25px;
+            padding-bottom:0px;
             // margin-bottom      : 20px;
             text-align         : center;
             color              : $gray-800;
