--- a/packages/common-sass-client/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass-client/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -40,7 +40,13 @@
             
         }
     }
-
+    .browser{
+        img{
+        width:11px;
+        margin-right: 2px;
+        height: auto;
+        }
+        }
     .fa{
         color:$gray-900;
     }
