--- a/packages/apps/admin/src/container/AppointmentMode/appointment-mode.scss
+++ b/packages/apps/admin/src/container/AppointmentMode/appointment-mode.scss
@@ -19,4 +19,13 @@
            }
        }
     }
+
+   
+}
+
+.switch.btn{
+    height:20px !important;
+    min-height: 0;
+    margin-left:20px;
+    font-size: 0.8rem !important;
 }
