doctor+buttons-icons

--- a/packages/apps/admin/src/container/AdminActivitiesLog/activity-log.scss
+++ b/packages/apps/admin/src/container/AdminActivitiesLog/activity-log.scss
@@ -222,6 +222,14 @@
         }
     }
 
+    .browser{
+        img{
+            width:11px;
+            height: auto;
+            margin-top:-2px;
+            margin-right:2px;
+        }
+    }
     
 
     @media (max-width: 1199px) {
