--- a/packages/common-sass/src/scss/_modal.scss
+++ b/packages/common-sass/src/scss/_modal.scss
@@ -40,6 +40,13 @@
              padding:25px;
          }
 
+         .modal-footer{
+             padding:0 25px;
+            &>{
+                margin:0;
+            }
+         }
+
         
      }
 
