--- a/packages/common-sass/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass/src/scss/pages/_profile-setup.scss
@@ -406,6 +406,10 @@
         .modal-body{
             padding:25px;
         }
+
+        .modal-footer{
+            padding:0 25px;
+        }
     }
 
     #label_status {
