--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -172,7 +172,7 @@
         color:$gray-700;
         font-size:0.8rem;
         line-height: 1.6rem;
-        text-transform: capitalize;
+        text-transform: uppercase;
         letter-spacing: 0.02rem;
 
 
